# libpeas

./: meson.build  meson_options.txt
libpeas/: peas-engine.c  peas-utils.c
loaders/: meson.build
loaders/lua5.1/: meson.build  peas-lua-utils.c
loaders/lua5.1/resources/: meson.build  peas-lua.gresource.xml
peas-demo/: peas-demo.c
peas-demo/plugins/: meson.build
peas-demo/plugins/luahello/: luahello.plugin
tests/libpeas/: extension-lua.c  meson.build
tests/libpeas/plugins/: extension-lua51-nonexistent.plugin  meson.build
tests/libpeas/plugins/extension-lua/: extension-lua51.plugin
